Fixed Carrier->StatesCovered empy lists and unit tests

--- a/MRT/Content/DataTables/css/responsive.bootstrap4.css
+++ b/MRT/Content/DataTables/css/responsive.bootstrap4.css
@@ -31,7 +31,7 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > th:first-child:before {
   font-family: 'Courier New', Courier, monospace;
   line-height: 14px;
   content: '+';
-  background-color: #0275d8;
+  background-color: #9C27B0;
 }
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > td:first-child:before,
 table.dataTable.dtr-inline.collapsed > tbody > tr.parent > th:first-child:before {
